Fix sections gap

--- a/styles/about.css
+++ b/styles/about.css
@@ -2,7 +2,7 @@
 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 4rem;
 }
@@ -96,7 +96,6 @@
 {
     color: var(--primary-color);
 }
-
 .about-me-text
 {
     max-width: 80%;
