--- a/styles/contact.css
+++ b/styles/contact.css
@@ -2,7 +2,7 @@
 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 4rem;
 }
@@ -69,6 +69,7 @@
     background-color: var(--primary-color);
     transform: translateX(-0.6rem);
 }
+
 .social-media-icon
 {
     width: 4rem;
