--- a/styles/header.css
+++ b/styles/header.css
@@ -13,7 +13,7 @@ header
 
     height: 15vh;
 
-    padding: 0px 8rem;
+    padding: 0px 5%;
 
     background-color: var(--bg-color-first);
 
