--- a/styles/projects-preview.css
+++ b/styles/projects-preview.css
@@ -2,7 +2,7 @@
 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 4rem;
 }
@@ -192,4 +192,12 @@
 {
     transform: translateY(-0.2rem);
     background-color: var(--primary-color);
+}
+
+@media (hover: none)
+{
+    .projects-preview-all-projects-button
+    {
+        background-color: var(--primary-color);
+    }
 }
