--- a/styles/skills.css
+++ b/styles/skills.css
@@ -2,7 +2,7 @@
 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 4rem;
 }
@@ -17,7 +17,7 @@
 {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 0.8fr));
     justify-content: center;
     align-items: center;
 
